--- a/static/sass/_home.scss
+++ b/static/sass/_home.scss
@@ -196,6 +196,7 @@ body {
 
 #statement {
     min-height: 50vh;
+    overflow: hidden;
 }
 
 #missionstatement {
